--- a/index.html
+++ b/index.html
@@ -304,7 +304,17 @@
             </div>
         </div>
     </section>
+    <style>
 
+        .card-wrap{
+            transition: 0.4s all ease-in-out;
+        }
+
+        .card-wrap:hover{
+            cursor: pointer;
+            transform: scale(1.05);
+        }
+      </style>
     <section data-bs-version="5.1" class="team1 cid-tlWEGK9OjJ mbr-parallax-background" id="team1-7">
 
 
