--- a/Contact.html
+++ b/Contact.html
@@ -221,7 +221,7 @@
                         </div>
                         
                         <div class="soc-item">
-                            <a href="https://www.instagram.com/explore/locations/1677278215935609/india/tezpur-assam/bordoichila-womens-hostel-tezpur-university/"
+                            <a href="https://www.instagram.com/bor.doi.chilaaaaaaaa/"
                                 target="_blank">
                                 <span class="mbr-iconfont mbr-iconfont-social socicon-instagram socicon"></span>
                             </a>
@@ -239,7 +239,7 @@
                 </div>
                 <div class="col-sm-12 copyright pl-0">
                     <p class="mbr-text mbr-fonts-style mbr-white display-7">
-                        © Copyright 2022 Bordoichila Women’s Hostel, Tezpur University<br>Developed by <a
+                        © Copyright 2023 Bordoichila Women’s Hostel, Tezpur University<br>Developed by <a
                             href="https://www.facebook.com/people/Aryan-Ashwini/100063992094438/" class="text-warning"
                             target="_blank">Aryan</a></p>
                 </div>
